ChangeLog
=========

1.3.0 (master)
--------------

*New:*

    * Add getfloat() method


1.2.1 (2014-10-24)
------------------

*Bugfix:*

    * Fix version number

1.2.0 (2014-10-20)
------------------

*New:*

    * Add support for directory-based configuration and providing defaults through a dict

*Removed:*

    * Remove support for ``ConfigGetter(namespace, file1, file2, file3)`` syntax (deprecated in 1.1.0),
      use ``ConfigGetter(namespace, [file1, file2, file3])`` instead

1.1.0 (2014-08-18)
------------------

*New:*

    * New initialization syntax

*Deprecated*

    * Using argument list for config file paths when initializing ConfigGetter is now deprecated,
      you need to use a list (use `ConfigGetter(namespace, ['settings_1.ini', 'settings_2.ini'])` instead of
      `ConfigGetter(namespace, 'settings_1.ini', 'settings_2.ini')`)


1.0.1 (2014-04-13)
------------------

*Bugfix:*

    * Fix packaging (missing requirements files)

1.0.0 (2014-04-12)
------------------

*New:*

    * First version

.. vim:et:ts=4:sw=4:tw=79:ft=rst: