@@ -106,7 +106,7 @@ class ConfigGetterTestCase(unittest.TestCase):
     def test_from_directory(self):
         """Test fetching from a directory."""
         getter = getconf.ConfigGetter('TESTNS', config_files=[self.example_directory])
-        self.assertEqual([self.example_path, self.example2_path], getter.search_files)
+        self.assertEqual([os.path.join(self.example_directory, '*')], getter.search_files)
         self.assertEqual([self.example_path, self.example2_path], getter.found_files)
         with Environ(TESTNS_FOO='blah'):
             # A non-file-defined value
@@ -123,7 +123,7 @@ class ConfigGetterTestCase(unittest.TestCase):
     def test_from_directory_and_files(self):
         """Test fetching from both directories and files"""
         getter = getconf.ConfigGetter('TESTNS', [self.example_directory, self.example_path])
-        self.assertEqual([self.example_path, self.example2_path, self.example_path], getter.search_files)
+        self.assertEqual([os.path.join(self.example_directory, '*'), self.example_path], getter.search_files)
         self.assertEqual([self.example_path, self.example2_path, self.example_path], getter.found_files)
         with Environ(TESTNS_FOO='blah'):
             # A non-file-defined value
@@ -136,6 +136,36 @@ class ConfigGetterTestCase(unittest.TestCase):
             self.assertEqual('13', getter.get('section2.bar'))
             # A section.key defined in the base file, not overridden
             self.assertEqual('21', getter.get('section1.otherfoo'))
+
+    def test_from_globs(self):
+        """Test fetching from globs"""
+        getter = getconf.ConfigGetter('TESTNS', [os.path.join(self.example_directory, '*2.ini')])
+        self.assertEqual([os.path.join(self.example_directory, '*2.ini')], getter.search_files)
+        self.assertEqual([self.example2_path], getter.found_files)
+        with Environ(TESTNS_FOO='blah'):
+            # A non-file-defined value
+            self.assertEqual('blah', getter.get('foo', 'foo'))
+            # A sectionless file-defined key
+            self.assertEqual('', getter.get('bar'))
+            # A section.key file-defined in all three => example wins
+            self.assertEqual('24', getter.get('section1.foo'))
+            # A section.key defined in the second file
+            self.assertEqual('13', getter.get('section2.bar'))
+            # A section.key defined in the base file, not overridden
+            self.assertEqual('', getter.get('section1.otherfoo'))
+
+    def test_environ_defined_globs(self):
+        """Test reading from an environment-defined config globs"""
+        with Environ(TESTNS_CONFIG=os.path.join(self.example_directory, '*2.ini'), TESTNS_FOO='blah'):
+            getter = getconf.ConfigGetter('TESTNS', [])
+            self.assertEqual([os.path.join(self.example_directory, '*2.ini')], getter.search_files)
+            self.assertEqual([self.example2_path], getter.found_files)
+            # A non-file-defined value
+            self.assertEqual('blah', getter.get('foo', 'foo'))
+            # A sectionless file-defined key
+            self.assertEqual('', getter.get('bar'))
+            # A section.key file-defined
+            self.assertEqual('24', getter.get('section1.foo'))
 
     def test_environ_defined_file(self):
         """Test reading from an environment-defined config file."""
